--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context=".Controller.ProductsActivity">
 
 
@@ -20,7 +21,7 @@
 
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/ProductsListView"
+        android:id="@+id/productsListView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
